# BaseProgramC-

./: .gitignore
BigNumberProdProg/: BigNumberProdProg.sln
Chain of responsibility/: Chain of responsibility.sln
CloneObj_ProdProg_UniqPtr/: CloneObj_ProdProg_UniqPtr.sln
Command/: Command.sln
Copying_Smart_Arrays/: Copying_Smart_Arrays.sln
Counter_Num_STL1/: Counter_Num_STL1.sln
Decorator/: Decorator.sln
Del_Doubl_STL1/: Del_Doubl_STL1.sln
Docker1/: Dockerfile
Docker2/: Dockerfile
Functor/: Functor.sln
Lesson_10/LeaverLibDynCMake/: CMakeLists.txt  main.cpp
Lesson_10/LeaverLibDynCMake/Lib/: Lib.cpp  Lib.h
Moving_objects_ProdProg/: Moving_objects_ProdProg.sln
Multithr_For_each/: Multithr_For_each.sln
Multithr_SortFuture/: Multithr_SortFuture.sln
Multithr_Swap/: Multithr_Swap.sln
Multithr_atomic_1/: Multithr_atomic_1.sln
Multithr_bar/: Multithr_bar.sln
Multithreading_1/: Multithreading_1.sln
Multithreading_2/: Multithreading_2.sln
Observer/: Observer.sln
ParserProdProgKP/: ParserProdProgKP.sln
PrintConteiner_STL2/: PrintConteiner.sln
ProgrammFault_PP/: ProgrammFault_PP.sln
SOLID/: SOLID.sln
SQL/SQL/: CMakeLists.txt  main.cpp
ScharedPtr_ProdProg/: ScharedPtr_ProdProg.sln
SimFRace/: SimFRace.sln
Smart_Array/: Smart_Array.sln
SqlSelectQueryBuilder/: SqlSelectQueryBuilder.sln
SqlSelectQueryBuilder_2/: SqlSelectQueryBuilder_2.sln
Square_Vector/: Square_Vector.sln
TCP_Client/: TCP_Client.sln
Template_Vector/: Template_Vector.sln
Thread_ResultWork/: Thread_ResultWork.sln
TrhredTCPServer/: TrhredTCPServer.sln
(+272 files in other folders)
